Footer fix, widget list item spacing

--- a/src/scss/_widgets.scss
+++ b/src/scss/_widgets.scss
@@ -2,7 +2,7 @@
 
 // Widgets :D see also `wrap-sidebar` and related classes in `_layout.scss`
 .widget {
-  @extend %links;
+  @extend %links-no-border;
   @extend %spacer-below;
   @include font-size(text-smaller);
   @include font-style(widget-text);
@@ -19,6 +19,12 @@
   // Lists
   ul ul {
     @include rem( margin-left, spacer(1/2) ); // Half length indentation since we don't have that much space to play with
+  }
+
+  // Content
+  li {
+    @include rem( line-height, spacer(2/3) );
+    @include rem( margin-bottom, spacer(1/3) );
   }
 
   // Text
